--- a/templates/_partials/hero.html.twig
+++ b/templates/_partials/hero.html.twig
@@ -1,21 +1,30 @@
-<section class="hero is-info is-medium is-bold">
+<section id="newsletter" class="hero is-primary">
     <div class="hero-body">
-        <div class="container has-text-centered">
-            <h1 class="title">
-               We monitor exchanges and notify you when new coin is added
-            </h1>
-            <h2 class="subtitle">
-                If you don't want to miss new coin feel free to subscribe.
-            </h2>
-            <div class="section">
-                <div class="column is-4 is-offset-4">
-                        <div class="field is-grouped">
-                            <form method="" action="">
-                                <input class="input" type="text" placeholder="Enter your email">
-                                <button class="button">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
+        <div class="container">
+            <div id="mc_embed_signup" class="columns is-vcentered">
+                <div class="column is-one-third is-left">
+                    <p class="title">Exchange monitor <strong>subscription</strong></p>
+                    <p class="subtitle">Get notified when new coin is added!</p>
+                </div>
+                <div class="column">
+                    <form action="" method="post" class="validate" target="_blank" novalidate="novalidate">
+                            <div class="field is-grouped">
+                                <div class="control has-icons-left is-expanded">
+                                    <input type="email" value="" name="EMAIL" class="input is-flat required email" id="email" placeholder="email address" required="" aria-required="true">
+                                    <span class="icon is-small is-left"><i class="fa fa-envelope"></i></span>
+                                </div>
+                                <div class="control">
+                                    <input type="submit" value="Subscribe" name="subscribe" class="button is-white is-outlined">
+                                </div>
+                            </div>
+                            <div id="responses">
+                                <div class="notification is-danger response" id="error-response" style="display:none"></div>
+                                <div class="notification is-success response" id="success-response" style="display:none"></div>
+                            </div>
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                <input type="text" name="b_b43b93fe633f0560b2a72a69c_52585e8803" tabindex="-1" value="">
+                            </div>
+                    </form>
                 </div>
             </div>
         </div>
