add usd and market cap and subscribe entity

--- a/templates/_partials/hero.html.twig
+++ b/templates/_partials/hero.html.twig
@@ -7,7 +7,7 @@
                     <p class="subtitle">Get notified when new coin is added!</p>
                 </div>
                 <div class="column">
-                    <form action="" method="post" class="validate" target="_blank" novalidate="novalidate">
+                    <form action="" method="post" class="validate" id="subscribe" target="_blank" novalidate="novalidate">
                             <div class="field is-grouped">
                                 <div class="control has-icons-left is-expanded">
                                     <input type="email" value="" name="EMAIL" class="input is-flat required email" id="email" placeholder="email address" required="" aria-required="true">
