--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,6 @@
         {% block footer %}
             {% include('/_partials/footer.html.twig') %}
         {% endblock %}
-        <script>{% block javascripts %}{% endblock %}</script>
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
