remove old exchange stuff

--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="content has-text-centered">
             <p>
-                <strong>EMOON</strong> by <a href="">JStudio</a>2017
+                <strong>Crypto milionare</strong> by <a href="">JStudio</a>2017
             </p>
         </div>
     </div>
