--- a/templates/_partials/nav.html.twig
+++ b/templates/_partials/nav.html.twig
@@ -13,9 +13,8 @@
             </div>
             <div id="navbarMenu" class="navbar-menu">
                 <div class="navbar-end">
-                    <a class="navbar-item" href="{{ url('app_exchanges_list') }}">Exchanges</a>
-                    <a class="navbar-item">News</a>
-                    <a class="navbar-item">FAQ</a>
+                    <a class="navbar-item">Log in</a>
+                    <a class="navbar-item">Latest milionare</a>
                 </div>
             </div>
         </div>
